Really fix firefox, content must be displayed after boostrap collapse trasitions have finished

--- a/less/style.less
+++ b/less/style.less
@@ -120,7 +120,6 @@ h2:focus {
         background-repeat: repeat;
         padding:8px 30px 12px 60px;
         border-bottom:1px solid @grismig;
-        z-index:10000;
 
         a {text-decoration:none;}
         h2 {
@@ -265,22 +264,11 @@ i.fletxa {
           -webkit-transition-property: opacity;
           -webkit-transition-duration: 1s;
           -webkit-transition-timing-function: ease-in-out;  
-          
-          -moz-transition-property: opacity;
-          -moz-transition-duration: 1s;
-          -moz-transition-timing-function: ease-in-out;              
-
 
          &.dissolve { opacity: 0;  
                       -webkit-transition-property: opacity;
                       -webkit-transition-duration: 1s;
-                      -webkit-transition-timing-function: ease-in-out;  
-
-                      -moz-transition-property: opacity;
-                      -moz-transition-duration: 1s;
-                      -moz-transition-timing-function: ease-in-out;              
-
-                     }
+                      -webkit-transition-timing-function: ease-in-out;  }
         }
 
         .pin {
@@ -326,7 +314,7 @@ i.fletxa {
     &#miratges { h3 { margin-left:220px; width:150px; } }
     &#testimonis { h3 { margin-left:260px; width:180px; } }
 }
-.navbar-fixed-top {z-index:10001;}
+
 
 .navbar .nav {
         font-family: "InterstateRegular", "Verdana";
@@ -420,7 +408,7 @@ i.fletxa {
     .navitem {
         float:left;
         width:200px;
-        margin:75px 0;        
+        margin:40px 0;        
         margin-left:20px;        
         img {
             width:96px;
@@ -444,22 +432,11 @@ i.fletxa {
         -webkit-transition-property: opacity;
         -webkit-transition-duration: 1s;
         -webkit-transition-timing-function: ease-in-out;              
-
-        -moz-transition-property: opacity;
-        -moz-transition-duration: 1s;
-        -moz-transition-timing-function: ease-in-out;              
-
         
         &.dissolve { opacity: 0;  
           -webkit-transition-property: opacity;
           -webkit-transition-duration: 1s;
-          -webkit-transition-timing-function: ease-in-out;  
-
-          -moz-transition-property: opacity;
-          -moz-transition-duration: 1s;
-          -moz-transition-timing-function: ease-in-out;              
-
-        }
+          -webkit-transition-timing-function: ease-in-out;  }
     }
         
 
